@@ -34,6 +34,8 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
 
   // Save buf pointer
   compiler->befbufptr = compiler->bufptr;
+  _Bool before_is_comma = compiler->before_is_comma;
+  compiler->before_is_comma = 0;
   
   // Constant minus sign
   int32_t minus = 0;
@@ -1176,6 +1178,14 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
           yylvalp->opval = op;
           
           return NAME;
+        }
+        
+        if (*compiler->bufptr == ',') {
+          if (before_is_comma && *compiler->bufptr == ',') {
+            fprintf(stderr, "Double camma is forbidden at %s line %" PRId32 "\n", compiler->cur_file, compiler->cur_line);
+            exit(EXIT_FAILURE);
+          }
+          compiler->before_is_comma = 1;
         }
         
         /* Return character */
